--- a/codes/state/PlaceContact/PlaceContact.html
+++ b/codes/state/PlaceContact/PlaceContact.html
@@ -14,7 +14,7 @@
   </ion-nav-title>
 
   <ion-header-bar class="bar-subheader flex h40px zero darker-bg">
-    <p class="zero white bold">연락받기</p>
+    <p class="zero color1 bold">연락받기</p>
   </ion-header-bar>
 
   <ion-content class="top84px">
