--- a/codes/state/1PostEvent/PostEvent.html
+++ b/codes/state/1PostEvent/PostEvent.html
@@ -5,7 +5,7 @@
 
   <ion-header-bar class="bar-subheader row h40px zero darker-bg">
     <p class="col flex zero color1 bold"
-      ng-click="goToState('Main.PostEvent.EventFitMateList', null, 'forward')"
+      ng-click="goToState('Main.PostEvent.EventFitMateList', null, 'back')"
       ng-class="{
         'white-bg': isState('Main.PostEvent.EventFitMateList'),
         'color2-bb2px': isState('Main.PostEvent.EventFitMateList')
