--- a/codes/state/EventCompanyContact/EventCompanyContact.html
+++ b/codes/state/EventCompanyContact/EventCompanyContact.html
@@ -14,8 +14,7 @@
   </ion-nav-title>
 
   <ion-header-bar class="bar-subheader flex row h40px zero color1-bg">
-    <p class="flex w200px h30px zero r5px white bold darker-bg">
-      <i class="icon ion-ios-email-outline mr5px "></i>
+    <p class="center zero r5px white bold">
       제휴 업체 이벤트 문의하기
     </p>
   </ion-header-bar>
