--- a/codes/state/EventCompanyList/EventCompanyList.html
+++ b/codes/state/EventCompanyList/EventCompanyList.html
@@ -62,7 +62,7 @@
 
     <ion-infinite-scroll
       on-infinite="EventCompanyList.loadMore()"
-      immediate-check="true"
+      immediate-check="false"
       ng-if="EventCompanyList.Model.more"
     >
     </ion-infinite-scroll>
