--- a/codes/state/Home/Home.html
+++ b/codes/state/Home/Home.html
@@ -13,7 +13,7 @@
     <h1 class="title">MYFITMATE</h1>
     <div class="buttons">
       <button class="button button-icon icon ion-android-share-alt"
-        ng-click="Home.share()"
+        ng-click="Link.share('My Fitmate', '운동은 My Fitmate와 함께')"
       >
       </button>
     </div>
