--- a/codes/state/Login/Login.html
+++ b/codes/state/Login/Login.html
@@ -22,12 +22,12 @@
       </div>
       <div class="absolute bottom10p w100p zero center">
         <button class="facebook-button button icon-left ion-social-facebook w200px mb10px white bold"
-          ng-click="Login.successLogin()"
+          ng-click="Login.loginWithFacebook()"
         >
           페이스북으로 시작하기
         </button>
         <button class="kakao-button button icon-left ion-ios-chatbubble w200px bold"
-          ng-click="Login.successLogin()"
+          ng-click="Login.loginWithKakao()"
         >
           카카오 계정으로 로그인
         </button>
