--- a/codes/state/EventCompanyContact/EventCompanyContact.html
+++ b/codes/state/EventCompanyContact/EventCompanyContact.html
@@ -25,7 +25,7 @@
         <p class="zero mb10px positive bold">제목</p>
         <input class="r3px placeholder-grey white-bg"
           type="text" placeholder="제목을 입력해주세요"
-          ng-model="PlaceContact.Model.form.title"
+          ng-model="EventCompanyContact.Model.form.title"
         >
       </div>
 
@@ -33,12 +33,13 @@
         <p class="zero mb10px positive bold">내용</p>
         <textarea class="h100px r3px placeholder-grey white-bg"
           placeholder="내용을 입력해 주세요"
+          ng-model="EventCompanyContact.Model.form.content"
         ></textarea>
       </div>
 
       <div class="flex zero">
         <button class="w100px h40px mr10px b0px r3px f18px white bold positive-bg"
-          ng-click=""
+          ng-click="EventCompanyContact.sendForm();"
         >
           문의하기
         </button>
