--- a/codes/state/Home/Home.html
+++ b/codes/state/Home/Home.html
@@ -32,12 +32,13 @@
         <div class="zero mb10px"
           ng-click="goToState('Main.DaumMap', null, 'forward')"
         >
+              <!-- WhereToGo -->
           <div class="relative w100p zero rt5px center positive-bg">
             <p class="h40px zero f18px lh40px white bold">
-              WhereToGo
+              우리동네 헬스장
             </p>
-            <button class="button-clear absolute top0px bottom0px left0px">
-              <img class="w30px h15px" src="img/mainpage_04.png">
+            <button class="button-clear absolute top0px bottom0px left15px">
+              <img class="w20px h25px" src="img/mainpage_05.png">
             </button>
           </div>
           <div class="zero center rb5px white-bg">
@@ -51,10 +52,10 @@
           >
             <div class="relative w100p zero rt5px center positive-bg">
               <p class="h40px zero pl20px f18px lh40px white bold">
-                나랑운동하자
+                FITMATE
               </p>
               <button class="button-clear absolute top0px bottom0px left0px">
-                <img class="w15px h20px" src="img/mainpage_05.png">
+                <img class="w30px h15px" src="img/mainpage_04.png">
               </button>
             </div>
             <div class="zero center rb5px white-bg">
