--- a/codes/state/PostFitDetail/PostFitDetail.html
+++ b/codes/state/PostFitDetail/PostFitDetail.html
@@ -10,7 +10,7 @@
   </ion-nav-buttons>
 
   <ion-nav-title class="bold">
-    <p class="zero">나랑운동하자</p>
+    <p class="zero">FITMATE</p>
   </ion-nav-title>
 
   <ion-content>
