--- a/codes/state/DaumMap/DaumMap.html
+++ b/codes/state/DaumMap/DaumMap.html
@@ -8,7 +8,9 @@
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <p class="white">WhereToGo</p>
+    <p class="white">
+      우리동네 헬스장
+    </p>
   </ion-nav-title>
   <ion-nav-buttons side="right">
     <button class="button button-icon icon ion-pinpoint"
